--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node sever.js"
+    "dev": "nodemon ./src/sever.js"
   },
   "keywords": [
     "nodejs",
@@ -14,6 +14,11 @@
   "author": "Danh",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "16.0.3",
+    "ejs": "3.1.8",
     "express": "4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.20"
   }
 }
